K8s/ingress/sample.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com # Change this to your desired domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service # Service name created earlier
                port:
                  number: 80
